Add view and action for NavigationLinks

--- a/Learny/Views/Home/_NavigationalLinksViewModel.cshtml
+++ b/Learny/Views/Home/_NavigationalLinksViewModel.cshtml
@@ -1,10 +1,14 @@
 ﻿@model Learny.ViewModels.NavigationalLinksViewModel
 
-@if(Model.ActivityId == null) { 
+@if (Model.ActivityId != null && Model.ModuleId != null && Model.CourseId != null)
+{
+<h5>Kurs: @Html.ActionLink(Model.FullCourseName, "Details", "Courses", new { id = Model.CourseId }, null) Modul: @Html.ActionLink(Model.ModuleName, "Details", "CourseModules", new { id = Model.ModuleId }, null) Aktivitet: @Html.ActionLink(Model.ActivityName, "Details", "ModuleActivities", new { id = Model.ActivityId }, null)</h5>
+}
+else if (Model.ModuleId != null && Model.CourseId != null)
+{
     <h5>Kurs: @Html.ActionLink(Model.FullCourseName, "Details", "Courses", new { id = Model.CourseId }, null) Modul: @Html.ActionLink(Model.ModuleName, "Details", "CourseModules", new { id = Model.ModuleId }, null)</h5>
 }
-
-@if (Model.ModuleId == null)
+else if (Model.CourseId != null)
 {
     <h5>Kurs: @Html.ActionLink(Model.FullCourseName, "Details", "Courses", new { id = Model.CourseId }, null)</h5>
 }
