--- a/Learny/Views/ModuleActivities/Manage.cshtml
+++ b/Learny/Views/ModuleActivities/Manage.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Aktiviteter";
 }
 
-<h5>Kurs: @Html.ActionLink(Model.FullCourseName, "Details", "Courses", new { id = Model.CourseId }, null) Modul: @Html.ActionLink(Model.ModuleName, "Details", "CourseModules", new { id = Model.CourseModuleId }, null)</h5>
+@Html.Action("NavigationLinks", "Home", new { idType = "moduleId", id = Model.CourseModuleId })
 
 @{
     var actionName = "";
@@ -51,7 +51,7 @@
                     @Html.LabelFor(model => model.ActivityTypes, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownListFor(model => model.ActivityTypeId,
-                               new SelectList(Model.ActivityTypes, "Id", "Name"), "-- Välj aktivitetstyp --", htmlAttributes: new { @class = "form-control" })
+                                    new SelectList(Model.ActivityTypes, "Id", "Name"), "-- Välj aktivitetstyp --", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.ActivityTypeId, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                 }
                 @Html.ActionLink("Till aktiviteten", "Details", "ModuleActivities", new { id = msgObj.Id }, null)
             </div>
-                    }
+        }
 
         @if (Model.ShowActivityList)
         {
