--- a/Learny/Views/Document/_DocumentsPartial.cshtml
+++ b/Learny/Views/Document/_DocumentsPartial.cshtml
@@ -5,7 +5,10 @@
     {
         <li>
             @Html.ActionLink(item.DisplayName, "OpenDocument", new { id = item.Id }, new { title = item.Description })
-            @Html.ActionLink(" ", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-remove" })
+            @if (User.IsInRole(Learny.Settings.RoleName.teacher))
+            {
+                @Html.ActionLink(" ", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-remove" })
+            }
         </li>
     }
 </ul>
