--- a/Learny/Views/CourseModules/Manage.cshtml
+++ b/Learny/Views/CourseModules/Manage.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Moduler";
 }
 
-<h5>Kurs: @Html.ActionLink(Model.FullCourseName, "Details", "Courses", new { id = Model.CourseId }, null)</h5>
+@Html.Action("NavigationLinks", "Home", new { idType = Learny.Controllers.HomeController.IdType.Course, id = Model.CourseId })
 
 @{
     var actionName = "";
