--- a/Learny/Views/Courses/Delete.cshtml
+++ b/Learny/Views/Courses/Delete.cshtml
@@ -51,6 +51,8 @@
 }
 
 
+@Html.Action("NavigationLinks", "Home", new { idType = Learny.Controllers.HomeController.IdType.Course, id = Model.Id })
+
 <div class="panel panel-default">
 
     <div class="panel-heading">
