--- a/Learny/Views/ModuleActivities/Details.cshtml
+++ b/Learny/Views/ModuleActivities/Details.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Aktivitet";
 }
 
-<h5>Kurs: @Html.ActionLink(Model.FullCourseName, "Details", "Courses", new { id = Model.CourseId }, null)  Modul: @Html.ActionLink(Model.ModuleName, "Details", "CourseModules", new { id = Model.CourseModuleId }, null)</h5>
+@Html.Action("NavigationLinks", "Home", new { idType = Learny.Controllers.HomeController.IdType.Module, id = Model.CourseModuleId })
 
 <div class="container-fluid">
     <div class="row">
