--- a/Learny/Content/Site.css
+++ b/Learny/Content/Site.css
@@ -89,6 +89,12 @@ textarea {
         float: left;
         margin: 0;
     }
+
+    .navbar-nav > li > a {
+        padding-top: 25px;
+        padding-bottom: 15px;
+        padding-left: 40px;
+    }
 }
 
 @media (max-width: 992px) {
