--- a/Learny/Views/Student/Create.cshtml
+++ b/Learny/Views/Student/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model Learny.ViewModels.StudentCreateViewModel
 @{
-    ViewBag.Title = "Lägg till ny deltagare";
+    ViewBag.Title = "Lägg till ny elev";
 }
 
 @if (Model.CourseSelected == true)
