--- a/Learny/Views/Student/_StudentsTablePartial.cshtml
+++ b/Learny/Views/Student/_StudentsTablePartial.cshtml
@@ -2,7 +2,7 @@
 
 <table class="table">
     <tr class="headerRow">
-        <th>             Deltagare       </th>
+        <th>             Elever       </th>
         <th>            @Html.DisplayNameFor(model => model.Email)        </th>
     </tr>
 
